# cloud-project-portfolio

./: README.md  development_plan.md  extract_pdf.py  index.html  tmp_extract_pdf.py
.github/workflows/: pages.yml
src/: library.cpp  library.h
src/js/: app.js
src/styles/: styles.css
test/: CMakeLists.txt  test_library.cpp
